# neuromag_triggers

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  setup.py
neuromag_triggers/: core.py
src/neuromag_triggers/: __init__.py
tests/: test_triggers.py
