[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromag_triggers"
version = "0.1.0"
description = "Detect digital triggers from raw Neuromag STI channels with rising edge and refractory logic."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = ["mne", "numpy", "pandas"]