[project]
name = "neuromag_triggers"
version = "0.1.0"
description = "Trigger decoder for Neuromag MEG systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

authors = [
    { name="André Rupp", email="andre.rupp@uni-heidelberg.de" }
]

dependencies = [
    "mne",
    "numpy",
    "pandas"
]
