[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromag_triggers"
version = "0.1.0"
description = "Trigger decoder for Neuromag MEG systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

authors = [
    { name="André Rupp", email="andre.rupp@uni-heidelberg.de" }
]

dependencies = [
    "mne",
    "numpy",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

# NEW: tell pytest where to find the source code
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
